--- a/index.html
+++ b/index.html
@@ -3,62 +3,54 @@
   <head>
     <title> Vacation World</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="./normalize.css" />
-    <link rel= "stylesheet" href="./<style.css" />
+    <link rel="stylesheet" href="./normalize.css"/>
+
+     <link href="style.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
+  <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/explorer.jpeg" />
+   <h1 class="title cursive capitalize" >Top Vacation Spots</h1>
+   <h5>By: Aleksandar Tircevski</h5>
+   <h6 class="publish-time">Published: 2 Days Ago</h6>
+
+   <p>The world is full of fascinating places. Planning the perfect vacation involves packing up,
+     leaving home, and experiencing something new.
+   </p>
 
 
-<header>
-<h1 class= "title cursive capitalize">The history of AC Milan</h1>
-</header>
- <h2 class="destination">1.AC Milan</h2>
- <div class="description"> The first headquarters were established at the Fiaschetteria
-   Toscana in via Berchet in Milan, back in 1899. From that moment on, glorious history of
-   Milan started as the club wrote its in footballs record books becoming one of the most
-   famous and succesful teams in the World, especially over the last 15 years.
-   Rossoneri’s history is studded with the legendary names of those men who have made a
-   major contribution to the club's development: presidents, coaches or players. The first
-   president was a British expatriate, Alfred Edwards, who oversaw the club's first winning of
-   the national championship - only two years after its foundation. The president with the
-   highest number of trophies won is Silvio Berlusconi who has taken Milan to the pinnacle of
-   the world since taking control in 1986. Extremely prestigious wins, obtained in every part of
-   the world prove the unparalleled strength and organization of a great group.
 
-   A top club stands out thanks to its the strategies and to its leaders, among whom the
-   coaches play a decisive role; the story of AC Milan's successes is also linked to its coaches.
-   The greatest Italian bosses trained the teams, from Gipo Viani, Nereo Rocco and Nils
-   Liedholm, the masters of the Sixties, from whom Arrigo Sacchi and Fabio Capello took the
-   reins, basing their tactical and strategic philosophy on a modern, brilliant and spectacular football.</div>
+   <h2 class="destination">1. Pirovac, Croatia</h2>
+     <div class="description">Pirovac is a coastal municipality and village in Croatia,
+       formerly called Zloselo (Evil Village), 26 km from the city Sibenik with a total
+       of 1,846 inhabitants, 97% of which are Croats.
 
-   <img width="35%" alt="" src="http://mdp-media.acmilan.com/upl/img/milan-history.png">
 
-   <p>In the years of Berlusconi’s management, Sacchi and Capello won and triumphed, giving wonderful emotions
-     With Sacchi, Milan won in four national championships, two European Cups,
-     two European Super Cups and two consecutive Intercontinental Cups;
-     with Capello, four championships, a European Super Cup and a European Cup, in five seasons.
-     In the most recent years, Alberto Zaccheroni kept the rich tradition going as he led the team
-     to the win of a national championship in his first year before Fatih Terim took over
-      for a short time and then passed the reins on to Carlo Ancelotti: a very welcomed
-      return of one of the "invincibles" in Rossoneri’s big family.
-       In 2009/10 season, Leonardo took over from the top-winner Mister Ancelotti,
-        for one year, after 13 years spent in Milan’s family, first as a player, then as a manager.
 
-        After Leonardo, Massimiliano Allegri led an all-star team in 2010/2011 season, thanks also
-        to the new signings: Ibrahimovic, Robinho in August 2010 and Cassano, Van Bommel and
-        Emanuelson in January 2011. With these champions reinforcing the squad, Allegri and
-        Milan won the 18th Scudetto title and the 6th Italian Super Cup.
-        After two and a half seasons which included a Serie A runners-up spot and a third-place
-        finish, Massimiliano Allegri was replaced by Clarence Seedorf as AC Milan coach in
-        January 2014, with the former midfielder leading the team until the end of 2013/14 season
-        to the sixth place of the ranking.
-        Filippo Inzaghi, who had already written his name in AC Milan’s history as a player and
-        then as coach of the youth team, takes charge of the first team for 2014/15 season. Season
-        2015/2016 starts under the management of Sinisa Mihajlovic - who leads the team to
-        Coppa Italia final - and ends with Cristian Brocchi, promoted from AC Milan’s Primavera.
-        Vincenzo Montella is AC Milan’s s coach for season 2016/2017 and the Rossoneri win the
-        Supercoppa Italiana against Juventus, in Doha. From 27 November 2017 the new coach is
-        Gennaro Gattuso, promoted from Milan’s Primavera. Gattuso has had an outstanding and
-        winning career with Milan as a player (1999-2012).</p>
-      </body>
+        <a href="https://croatia.hr/sv-SE/upplevelser/strander/viken-makirina-pirovac" target="_blank">Learn More</a>
+
+        <h5> Top 5 To do list</h5>
+        <ul>
+          <li>eating cevape</li>
+          <li>Citymall</li>
+          <li>Mavrovo</li>
+          <li>Matka</li>
+          <li>Plostad</li>
+        </ul>
+      </div>
+
+      <h2 class="destination"> Skopje, Macedonia</h2>
+      <div class="description"> Skopje offers a very nice and good vacations with a very god food.
+
+        <h2 class="destination">2.Munchen, Germany</h2>
+        <div class="description"> Munich is the headoffice of german car manufacturer BMW. A great car to drive.
+
+          <h2> More Destinations</h2>
+         <ul>
+          <li><h4 class="destination"> Zagreb</h4></li>
+            <li><h4 class="destination"> Belgrade</h4></li>
+            <li><h4 class="destination"> Split</h4></li>
+          </ul>
+
+          </body>
+        </htmnl>
