--- a/index.html
+++ b/index.html
@@ -31,19 +31,25 @@
 
         <h5> Top 5 To do list</h5>
         <ul>
-          <li>eating cevape</li>
-          <li>Citymall</li>
-          <li>Mavrovo</li>
-          <li>Matka</li>
-          <li>Plostad</li>
+          <li>Swimming</li>
+          <li>Boattrip</li>
+          <li>Visit nearby small cities and villages</li>
+          <li>cycling in the mountains</li>
+
         </ul>
       </div>
 
-      <h2 class="destination"> Skopje, Macedonia</h2>
-      <div class="description"> Skopje offers a very nice and good vacations with a very god food.
+      <h2 class="destination">2. Skopje, Macedonia</h2>
+      <div class="description"> Skopje is the capital and largest city of North Macedonia.
+    It is the country's political, cultural, economic, and academic center.
+    From 1282, the town was part of the Serbian Empire and acted as its capital city from 1346 to 1371.
+    Skopje is located on the upper course of the Vardar River, and is located on a major north-south Balkan
+    route between Belgrade and Athens.
 
-        <h2 class="destination">2.Munchen, Germany</h2>
-        <div class="description"> Munich is the headoffice of german car manufacturer BMW. A great car to drive.
+        <h2 class="destination">3. Zadar, Croatia</h2>
+        <div class="description"> Zadar is the oldest continuously-inhabited Croatian city.It is situated on the Adriatic Sea,
+    at the northwestern part of Ravni Kotari region.Zadar serves as the seat of Zadar County and of the wider northern Dalmatian region.
+
 
           <h2> More Destinations</h2>
          <ul>
